tests/routing/gateway-api-migration/application.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: migration-backend
spec:
  image: image
  port: 8080
