tests/routing/gateway-api-migration/ready-secret.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: migration-routing-tls
  namespace: istio-gateways
spec:
  dnsNames:
    - migration-routing.example.com
  issuerRef:
    kind: ClusterIssuer
    name: cluster-issuer
  secretName: migration-routing-tls
