tests/routing/gateway-api-migration/routing-standard.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Routing
metadata:
  name: migration-routing
spec:
  hostname: migration-routing.example.com+migration-routing-tls
  routingProvider: standard
  redirectToHTTPS: true
  routes:
    - pathPrefix: /api
      targetApp: migration-backend
      port: 8080
